--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block">
+        <div class="col-1 hour">9:00</div>
+        <div class="col-10 "></div>
+        <div class="col-1 saveBtn">Save</div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
