--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-block col-2"></div>
+      <textarea class="col-8"></textarea>
+      <button class="saveBtn col-2">Save</button>
+      
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
