--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row time-slot" id="hr-9">
+        <div class="col-2 hour"> 9:00am</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"></button>
+      </div>
+      
+      
       <div class="row hour col-2">9:00am</div>
       <textarea class="col-8 time-block"></textarea>
       <button class="saveBtn col-2"><span></span></button>
