updated timeblocks html

--- a/index.html
+++ b/index.html
@@ -31,39 +31,52 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-slot" id="hr-9">
-        <div class="col-2 hour"> 9:00am</div>
+        <div class="col-2 hour">9:00am</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 save-btn"></button>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-10">
+        <div class="col-2 hour">10:00am</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-11">
+        <div class="col-2 hour">11:00am</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-12">
+        <div class="col-2 hour">12:00pm</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-13">
+        <div class="col-2 hour">1:00pm</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-14">
+        <div class="col-2 hour">2:00pm</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-15">
+        <div class="col-2 hour">3:00pm</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-16">
+        <div class="col-2 hour">4:00pm</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
+      </div>
+      <div class="row time-slot" id="hr-17">
+        <div class="col-2 hour">5:00pm</div>
+        <div class="col-8 time-block"></div>
+        <button class="col-2 save-btn"><span class="oi oi-box"></span></button>
       </div>
       
       
-      <div class="row hour col-2">9:00am</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">10:00am</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">11:00am</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">12:00pm</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">1:00pm</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">2:00pm</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">3:00pm</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">4:00am</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
-      <div class="row hour col-2">5:00pm</div>
-      <textarea class="col-8 time-block"></textarea>
-      <button class="saveBtn col-2"><span></span></button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
