--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row time-slot" id="hr-9">
         <div class="col-2 hour">9:00am</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-10">
         <div class="col-2 hour">10:00am</div>
