--- a/index.html
+++ b/index.html
@@ -38,42 +38,42 @@
       <div class="row time-slot" id="hr-10">
         <div class="col-2 hour">10:00am</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-11">
         <div class="col-2 hour">11:00am</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-12">
         <div class="col-2 hour">12:00pm</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-13">
         <div class="col-2 hour">1:00pm</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-14">
         <div class="col-2 hour">2:00pm</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-15">
         <div class="col-2 hour">3:00pm</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-16">
         <div class="col-2 hour">4:00pm</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       <div class="row time-slot" id="hr-17">
         <div class="col-2 hour">5:00pm</div>
         <div class="col-8 time-block"></div>
-        <button class="col-2 saveBtn"><span class="oi oi-box"></span></button>
+        <button class="col-2 saveBtn">Save</button>
       </div>
       
       
